メールフォーム追加

--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
         <meta charset="utf-8">
         <title>RyuSakaEnginner</title>
     </head>
+
+    <body>
+        <header>
+            <h1>Unity入門 MAC編</h1>
+        </header>
+
+        <a href="mailto:ryusakamakijob@gmail.com">問い合わせメールはこちらまで</a>
+    </body>
 </html>
