ファイル整理

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -2,10 +2,12 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./CSS/Home.css">
         <title>RyuSakaEnginner</title>
     </head>
 
     <body>
+        
         <header>
             <h1>Unity入門 MAC編</h1>
         </header>
