Homeページ更新

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="./CSS/Home.css">
-        <title>RyuSakaEnginner</title>
-    </head>
 
-    <body>
-        
-        <header>
-            <h1>Unity入門 MAC編</h1>
-        </header>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="../CSS/Home.css">
+    <title>RyuSakaEnginner</title>
+</head>
 
-        <a href="mailto:ryusakamakijob@gmail.com">問い合わせメールはこちらまで</a>
-    </body>
+<body>
+
+    <Unity>
+        <h1>Unity入門</h1>
+        <h2>Unityの開発環境を準備しよう！Windows版</h2>
+        <h2>Unityの開発環境を準備しよう！Mac版</h2>
+    
+        <h2>とりあえず動くものをつくろう！</h2>
+    </Unity>
+
+    <a href="mailto:ryusakamakijob@gmail.com">問い合わせメールはこちらまで</a>
+</body>
+
 </html>
