--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -4,20 +4,51 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../CSS/Home.css">
-    <title>RyuSakaEnginner</title>
+    <title name="title">RyuSakaEnginner</title>
 </head>
 
 <body>
+    <header>
+        <h1 class="header-title">SAKARYU 開発部</h1>
+        <nav>
+            <ul class="header-group">
+                <li class="header-item"><a class="header-item-txt" href="#unity">Unity入門</a></li>
+                <li class="header-item"><a class="header-item-txt" href="#vba">VBA入門</a></li>
+                <li class="header-item"><a class="header-item-txt" href="#excel">Excel入門</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <Unity>
-        <h1>Unity入門</h1>
+        <h1 class="header-normal">Unity入門</h1>
         <h2>Unityの開発環境を準備しよう！Windows版</h2>
         <h2>Unityの開発環境を準備しよう！Mac版</h2>
-    
-        <h2>とりあえず動くものをつくろう！</h2>
+
+        <h2>①まずは動くものをつくろう！</h2>
+        <h2>②ゲームの調整をしよう！</h2>
+        <h2>③ゲームにUIを追加しよう！</h2>
     </Unity>
 
-    <a href="mailto:ryusakamakijob@gmail.com">問い合わせメールはこちらまで</a>
+    <br>
+
+    <vba>
+        <h1 class="header-normal">VBA入門</h1>
+        <h2>①セルを取得しよう！</h2>
+        <h2>②取得したデータで計算をしよう！</h2>
+    </vba>
+
+    <br>
+
+    <excel>
+        <h1 class="header-normal">Excel入門</h1>
+        <h2>①セルに値を入れてみよう！</h2>
+        <h2>②簡単な関数を使おう！</h2>
+    </excel>
+
+    <footer>
+        <description>※当サイトは個人で開発しており技術のアウトプットの場として利用しています。<br>ご意見、ご要望などございましたら下記メールにてお願いします。<br></description>
+        <a class="email-address" href="mailto:ryusakamakijob@gmail.com">問い合わせメールはこちらまで</a>
+    </footer>
 </body>
 
 </html>
