--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" content="GPTに頼む"> 
     <link rel="stylesheet" href="../CSS/Home.css">
     <title name="title">RyuSakaEnginner</title>
 </head>
 
 <body>
     <header>
-        <h1 class="header-title">SAKARYU 開発部</h1>
+        <h1 class="header-title">タイトル</h1>
         <nav>
             <ul class="header-group">
                 <li class="header-item"><a class="header-item-txt" href="#unity">Unity入門</a></li>
@@ -19,34 +19,35 @@
         </nav>
     </header>
 
-    <Unity>
-        <h1 class="header-normal">Unity入門</h1>
+    <div>
+        <h1 id="unity" class="content-header">Unity入門</h1>
         <h2>Unityの開発環境を準備しよう！Windows版</h2>
         <h2>Unityの開発環境を準備しよう！Mac版</h2>
 
         <h2>①まずは動くものをつくろう！</h2>
         <h2>②ゲームの調整をしよう！</h2>
         <h2>③ゲームにUIを追加しよう！</h2>
-    </Unity>
 
-    <br>
+        <br>
 
-    <vba>
-        <h1 class="header-normal">VBA入門</h1>
+        <h1 id="vba" class="content-header">VBA入門</h1>
         <h2>①セルを取得しよう！</h2>
         <h2>②取得したデータで計算をしよう！</h2>
-    </vba>
 
-    <br>
+        <br>
 
-    <excel>
-        <h1 class="header-normal">Excel入門</h1>
+        <h1 id="excel" class="content-header">Excel入門</h1>
         <h2>①セルに値を入れてみよう！</h2>
         <h2>②簡単な関数を使おう！</h2>
-    </excel>
+
+        <br>
+
+        
+
+    </div>
 
     <footer>
-        <description>※当サイトは個人で開発しており技術のアウトプットの場として利用しています。<br>ご意見、ご要望などございましたら下記メールにてお願いします。<br></description>
+        <a>※ご意見、ご要望などございましたら下記メールにてお願いします。<br></a>
         <a class="email-address" href="mailto:ryusakamakijob@gmail.com">問い合わせメールはこちらまで</a>
     </footer>
 </body>
