ホームページ（仮）完成

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="utf-8" content="GPTに頼む"> 
     <link rel="stylesheet" href="../CSS/Home.css">
-    <title name="title">RyuSakaEnginner</title>
+    <title>RyuSakaEnginner</title>
 </head>
 
 <body>
     <header>
-        <h1 class="header-title">タイトル</h1>
+        <h1 class="title">タイトル</h1>
         <nav>
-            <ul class="header-group">
-                <li class="header-item"><a class="header-item-txt" href="#unity">Unity入門</a></li>
-                <li class="header-item"><a class="header-item-txt" href="#vba">VBA入門</a></li>
-                <li class="header-item"><a class="header-item-txt" href="#excel">Excel入門</a></li>
+            <ul class="tab">
+                <li class="element"><a class="txt" href="Home.html">トップページ</a></li>
+                <li class="element"><a class="txt" href="">Unity入門</a></li>
+                <li class="element"><a class="txt" href="">VBA入門</a></li>
+                <li class="element"><a class="txt" href="">Excel入門</a></li>
             </ul>
         </nav>
     </header>
@@ -28,21 +29,13 @@
         <h2>②ゲームの調整をしよう！</h2>
         <h2>③ゲームにUIを追加しよう！</h2>
 
-        <br>
-
         <h1 id="vba" class="content-header">VBA入門</h1>
         <h2>①セルを取得しよう！</h2>
         <h2>②取得したデータで計算をしよう！</h2>
 
-        <br>
-
         <h1 id="excel" class="content-header">Excel入門</h1>
         <h2>①セルに値を入れてみよう！</h2>
         <h2>②簡単な関数を使おう！</h2>
-
-        <br>
-
-        
 
     </div>
 
