作業保存のコミット

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" content="GPTに頼む"> 
     <link rel="stylesheet" href="../CSS/Home.css">
-    <title>RyuSakaEnginner</title>
+    <title>トップページ</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <nav>
             <ul class="tab">
                 <li class="element"><a class="txt" href="Home.html">トップページ</a></li>
-                <li class="element"><a class="txt" href="">Unity入門</a></li>
+                <li class="element"><a class="txt" href="./Unity/Unity.html">Unity入門</a></li>
                 <li class="element"><a class="txt" href="">VBA入門</a></li>
                 <li class="element"><a class="txt" href="">Excel入門</a></li>
             </ul>
@@ -25,9 +25,11 @@
         <h2>Unityの開発環境を準備しよう！Windows版</h2>
         <h2>Unityの開発環境を準備しよう！Mac版</h2>
 
-        <h2>①まずは動くものをつくろう！</h2>
-        <h2>②ゲームの調整をしよう！</h2>
-        <h2>③ゲームにUIを追加しよう！</h2>
+        <h2>１章 まずはプロジェクトを作ろう！</h2>
+        <a>まずは簡単なプログラミングをしよう！<br>環境構築がまだの人は上記の環境構築編からご覧ください。</a>
+        <h2>２章 ゲームの調整をしよう！</h2>
+        <a>プログラミングが出来たら今度はゲームの調整をしよう！<br>お好みの難易度設定ができるよ！</a>
+        <h2>３章 ゲームにUIを追加しよう！</h2>
 
         <h1 id="vba" class="content-header">VBA入門</h1>
         <h2>①セルを取得しよう！</h2>
