--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -14,8 +14,8 @@
             <ul class="tab">
                 <li class="element"><a class="txt" href="Home.html">トップページ</a></li>
                 <li class="element"><a class="txt" href="./Unity/Unity.html">Unity入門</a></li>
-                <li class="element"><a class="txt" href="">VBA入門</a></li>
-                <li class="element"><a class="txt" href="">Excel入門</a></li>
+                <!-- <li class="element"><a class="txt" href="">VBA入門</a></li>
+                <li class="element"><a class="txt" href="">Excel入門</a></li> -->
             </ul>
         </nav>
     </header>
@@ -31,13 +31,13 @@
         <a>プログラミングが出来たら今度はゲームの調整をしよう！<br>お好みの難易度設定ができるよ！</a>
         <h2>３章 ゲームにUIを追加しよう！</h2>
 
-        <h1 id="vba" class="content-header">VBA入門</h1>
+        <!-- <h1 id="vba" class="content-header">VBA入門</h1>
         <h2>①セルを取得しよう！</h2>
         <h2>②取得したデータで計算をしよう！</h2>
 
         <h1 id="excel" class="content-header">Excel入門</h1>
         <h2>①セルに値を入れてみよう！</h2>
-        <h2>②簡単な関数を使おう！</h2>
+        <h2>②簡単な関数を使おう！</h2> -->
 
     </div>
 
