--- a/HTML/Unity/Unity2.html
+++ b/HTML/Unity/Unity2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" content="GPTに頼む">
-    <link rel="stylesheet" href="../CSS/Home.css">
+    <link rel="stylesheet" href="../../CSS/Unity.css">
     <title>Unityトップ入門</title>
 </head>
 
