--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -13,9 +13,8 @@
         <nav>
             <ul class="tab">
                 <li class="element"><a class="txt" href="Home.html">トップページ</a></li>
-                <li class="element"><a class="txt" href="./Unity/Unity.html">Unity入門</a></li>
-                <!-- <li class="element"><a class="txt" href="">VBA入門</a></li>
-                <li class="element"><a class="txt" href="">Excel入門</a></li> -->
+                <li class="element"><a class="txt" href="../HTML/Unity/Unity.html">Unity入門①</a></li>
+                <li class="element"><a class="txt" href="../HTML/Unity/Unity2.html">Unity入門②</a></li>
             </ul>
         </nav>
     </header>
