--- a/HTML/Unity/Unity2.html
+++ b/HTML/Unity/Unity2.html
@@ -26,6 +26,15 @@
         <img src="../../Images/Unity/Programing/Unity5.png" class="unity-img">
         <a></a>
 
+        <h2>2-2 スクリプト作成②</h2>
+        <img src="../../Images/Unity/Programing/Unity6.png" class="unity-img">
+        <a>ファイル名は[MoveBox]としましょう。</a>
+
+        <h2>2-3 スクリプト作成③</h2>
+        <img src="../../Images/Unity/Programing/Unity7.png" class="unity-img">
+        <a>ファイルをダブルクリックで開きましょう！</a>
+
+
     </div>
 
     <footer>
