--- a/HTML/Unity/Unity.html
+++ b/HTML/Unity/Unity.html
@@ -4,22 +4,33 @@
 <head>
     <meta charset="utf-8" content="GPTに頼む">
     <link rel="stylesheet" href="../../CSS/Unity.css">
-    <title>Unityトップ入門</title>
+    <title>Unity入門</title>
 </head>
 
 <body>
-    <header>
-        <h1 class="title">Unity入門編</h1>
-        <nav>
+    <div class="header">
+        Unity入門編
+    </div>
+
+    <div class="left-menu">
+        <h2 class="title">項目一覧</h2>
+        <ul>
+            <li class="agenda">事前準備</li>
             <ul>
-
+                <li class="content">①Visual Studioのインストール。</li>
+                <li class="content">②Unity Hubのインストール。</li>
             </ul>
-        </nav>
-    </header>
+            <li class="agenda">用語</li>
+            <ul>
+                <li class="content">オブジェクト</li>
+                <li class="content">アタッチ</li>
+                <li class="content">コンポーネント</li>
+            </ul>
+        </ul>
+    </div>
 
-    <div>
-        <h1 class="content-header">Unity未経験がゲーム開発者になる方法！</h1>
-        <h2>Unity Hubにログインをしよう！</h2>
+    <div class="main">
+        <h2>Unity Hubにログインをしよう！</h1>
         <img src="../../Images/Unity/Project1/Unity1.jpeg" class="unity-img" loading="lazy">
         <a>環境構築ができたらログインをしましょう！<br>
             （アカウント作成がまだの方は<strong><span style="color: rgb(62, 62, 255);">[Sign
@@ -27,7 +38,7 @@
                     Account]</span></strong>でアカウントを作成しましょう！）
         </a>
 
-        <h2>プロジェクト作成①</h2>
+        <h2>Unityプロジェクト作成①</h1>
         <img src="../../Images/Unity/Project1/Unity2.jpeg" class="unity-img" loading="lazy">
 
         <h2>プロジェクト作成②</h2>
@@ -108,12 +119,17 @@
 
         <h2>完成</h2>
         <img src="../../Images/Unity/Project1/Unity25.jpeg" class="unity-img" loading="lazy">
-    </div>
 
-    <footer>
+        <h2>以上。これでひとまずゲームを作る事ができました！</br>
+            次はゲームを拡張するためのノウハウを書いていこうと思います！</br>
+            それでは、お疲れ様でした！
+        </h2>
+
         <a>※ご意見、ご要望などございましたら下記メールにてお願いします。<br></a>
         <a href="mailto:ryusakamakijob@gmail.com">問い合わせメールはこちらまで</a>
-    </footer>
+    </div>
+
+
 </body>
 
 </html>
