--- a/HTML/Unity/Unity.html
+++ b/HTML/Unity/Unity.html
@@ -40,18 +40,25 @@
 
             </br>
 
-            <li class="agenda">シェア</li>
+            <li class="agenda">共有</li>
             <ul>
-                <li><a href="https://twitter.com/share?url=https:// ここにURL /" target="_blank">Twitterでシェア</a></li>
+                <li><a href="https://twitter.com/share?url=https:// ここにURL /" target="_blank">X(Twitter)でシェア</a></li>
                 <li><a href="https://www.facebook.com/sharer/sharer.php?u=https://www.example.com/fantasy-adventure"
                         target="_blank">Facebookでシェア</a></li>
             </ul>
 
             </br>
 
+            <li class="agenda">Git Hub</li>
+            <ul>
+                <li><a href="https://github.com/RyuSaka311/First-Project" target="_blank">今回のプロジェクト</a></li>
+            </ul>
+
+            <br>
+
             <li class="agenda">お問い合わせ</li>
             <ul>
-                <a href="mailto:ryusakamakijob@gmail.com">メールはこちら</a>
+                <li><a href="mailto:ryusakamakijob@gmail.com">メールはこちら</a></li>
             </ul>
     </div>
 
@@ -98,30 +105,25 @@
         <img src="../../Images/Unity/Project1/Unity9.jpeg" class="unity-img" loading="lazy">
         <p>さて、先ほど作成したコンポーネント(スクリプト)をゲームオブジェクトにアタッチしましょう！<br>左側の赤枠の部分で右クリックでメニューを開きます。</p>
 
-        <h2>コンポーネントアタッチ</h2>
+        <h2>コンポーネントをアタッチ</h2>
         <img src="../../Images/Unity/Project1/Unity10.jpeg" class="unity-img" loading="lazy">
         <p>続いて作成したゲームオブジェクトを選択した状態で右下の[Add Component]を押します！</p>
 
-        <h2>ゲーム作成⑦</h2>
+        <h2>コンポーネントをアタッチ</h2>
         <img src="../../Images/Unity/Project1/Unity11.jpeg" class="unity-img" loading="lazy">
+        <p>検索欄に先ほど作成したファイル名を入力して選択します！</p>
 
         <h2>ゲーム実行</h2>
         <img src="../../Images/Unity/Project1/Unity12.jpeg" class="unity-img" loading="lazy">
+        <p>上部の[実行ボタン]を押して実際に操作をしてみましょう！上手くできていれば、WASD or 矢印キーで動きます！</p>
 
-        <h2>ゲーム作成⑧</h2>
+        <h2>ゲームオブジェクトの削除</h2>
         <img src="../../Images/Unity/Project1/Unity13.jpeg" class="unity-img" loading="lazy">
+        <p>続いてゲームオブジェクトの削除をしましょう！<br>削除したいゲームオブジェクトを選択し右クリックでメニューを開き[Delete]で削除します！</p>
 
-        <h2>ゲーム作成⑨</h2>
-        <img src="../../Images/Unity/Project1/Unity11.jpeg" class="unity-img" loading="lazy">
-
-        <h2>ゲーム作成⑩</h2>
-        <img src="../../Images/Unity/Project1/Unity12.jpeg" class="unity-img" loading="lazy">
-
-        <h2>ゲーム作成⑪</h2>
-        <img src="../../Images/Unity/Project1/Unity13.jpeg" class="unity-img" loading="lazy">
-
-        <h2>ゲーム作成⑫</h2>
+        <h2>ステージの作成</h2>
         <img src="../../Images/Unity/Project1/Unity14.jpeg" class="unity-img" loading="lazy">
+        <p>続いてステージを作っていきましょう！<br>[Square]を作成して画面右のTransformの値を画像のように調整しましょう！</p>
 
         <h2>ゲーム作成⑬</h2>
         <img src="../../Images/Unity/Project1/Unity15.jpeg" class="unity-img" loading="lazy">
@@ -155,16 +157,11 @@
 
         <h2>完成</h2>
         <img src="../../Images/Unity/Project1/Unity25.jpeg" class="unity-img" loading="lazy">
-
         <p>以上。これでひとまずゲームを作る事ができました！</br>
             次はゲームを拡張するためのノウハウを書いていこうと思います！</br>
             それでは、お疲れ様でした！
         </p>
-
-
     </div>
-
-
 </body>
 
 </html>
