作業保存のコミット

--- a/HTML/Unity/Unity.html
+++ b/HTML/Unity/Unity.html
@@ -123,21 +123,27 @@
 
         <h2>ステージの作成</h2>
         <img src="../../Images/Unity/Project1/Unity14.jpeg" class="unity-img" loading="lazy">
-        <p>続いてステージを作っていきましょう！<br>[Square]を作成して画面右のTransformの値を画像のように調整しましょう！</p>
+        <p>続いてステージを作っていきましょう！<br>[Square]を作成して画面右の[Transform]の値を画像のように調整しましょう！</p>
 
-        <h2>ゲーム作成⑬</h2>
+        <h2>当たり判定の実装</h2>
         <img src="../../Images/Unity/Project1/Unity15.jpeg" class="unity-img" loading="lazy">
+        <p>続いて[Box Collider 2D]コンポーネントをアタッチしましょう！</p>
 
-        <h2>ゲーム作成⑭</h2>
+        <h2>Playerの作成</h2>
         <img src="../../Images/Unity/Project1/Unity16.jpeg" class="unity-img" loading="lazy">
+        <p>次は[Capsule]を配置して[Capsule Collider 2D]と[Rigidbody 2D]をアタッチしましょう！</p>
 
-        <h2>ゲーム作成⑮</h2>
+        <h2>Playerコンポーネントの作成</h2>
         <img src="../../Images/Unity/Project1/Unity17.jpeg" class="unity-img" loading="lazy">
+        <p>Playerを選択しAdd Componentで[PlayerController]と名前をつけたスクリプトを作成します！</p>
 
-        <h2>ゲーム作成⑯</h2>
+        <h2>スクリプトの編集</h2>
         <img src="../../Images/Unity/Project1/Unity18.jpeg" class="unity-img" loading="lazy">
+        <p>画像のようになっていれば大丈夫です！<br>問題が良ければ以下のコードになるように[PlayerController]を編集してください！</p>
 
-        <h2>ゲーム作成⑰</h2>
+        <code>a = 1;</code>
+
+        <h2>接地判定をし、動きの制御を実装しましょう！</h2>
         <img src="../../Images/Unity/Project1/Unity19.jpeg" class="unity-img" loading="lazy">
 
         <h2>ゲーム作成⑱</h2>
