--- a/HTML/Unity/Unity.html
+++ b/HTML/Unity/Unity.html
@@ -49,9 +49,10 @@
 
             </br>
 
-            <li class="agenda">Git Hub</li>
+            <li class="agenda">今回のプロジェクト</li>
             <ul>
-                <li><a href="https://github.com/RyuSaka311/First-Project" target="_blank">今回のプロジェクト</a></li>
+                <li><a href="https://github.com/RyuSaka311/First-Project" target="_blank">Github</a></li>
+                <li><a href="../../Provide/Sample.zip" download="Sample.zip">zipファイルダウンロード</a></li>
             </ul>
 
             <br>
